# rust-api-tutorial-3

./: Cargo.toml  README.md
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
