[package]
name = "rust-api-tutorial-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "rust-api-tutorial-3"

[dependencies]
actix-web = "4.0.0"
chrono = "0.4.15"
config = "0.11"
env_logger = "0.9.0"
serde = { version = "1.0.0", features = ["derive"] }
sqlx = { version = "0.5.13", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11"
